--- a/app/assets/stylesheets/hyrax/_collections.scss
+++ b/app/assets/stylesheets/hyrax/_collections.scss
@@ -79,6 +79,90 @@ div.view-type {
   padding-left: 0;
 }
 
+
+.parent{
+    width:200px;
+    height:200px;
+    position:absolute;
+    z-index:0;
+}
+
+.inner{
+    position:absolute;
+    z-index:1;
+    bottom:0;
+    right:0;
+}
+
+
+.banner {
+  margin-bottom: 40px;
+  background-image: inherit;
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 200px;
+  position: relative;
+}
+
+.banner .title {
+  padding: 20px;
+  width: 70%;
+  color: black;
+  
+  h2 {
+    margin: 0;
+  }
+}
+
+.banner .logos {
+  padding: 20px;
+  padding-top: 0;
+  padding-bottom: 80px;
+  a {
+    display: inline-block;
+    max-width: 150px;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+.banner .byline {
+  padding-left: 20px;
+  position: absolute;
+  bottom: 0;
+}
+
+
+
+
+
+
+
+
+#png1 {
+    position:absolute;
+    width:auto;
+    height:300px;
+    left:0;
+    z-index:1;
+}
+
+#png2 {
+    position:absolute;
+    /*
+    set top and left here
+    */
+    width:70px;
+    height:40px;
+    top:300px;
+    left:40px;
+    z-index:2;
+}
+
+
 form.per_page {
   fieldset {
     margin-bottom: 1em;
